--- a/iOSMove/Info.plist
+++ b/iOSMove/Info.plist
@@ -2,6 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Actual Config</key>
+	<dict>
+		<key>interval</key>
+		<integer>5</integer>
+	</dict>
+	<key>Default config</key>
+	<dict>
+		<key>interval</key>
+		<integer>5</integer>
+	</dict>
 	<key>CFBundleGetInfoString</key>
 	<string></string>
 	<key>NSAppTransportSecurity</key>
